# hlapipeline

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Jenkinsfile  LONG_DESCRIPTION.rst  README.rst  setup.cfg  setup.py
docs/: Makefile  design.rst  environment.yml  index.rst  make.bat  rtd-pip-requirements
docs/source/: CODE_OF_CONDUCT.rst  conf.py  index.rst  installation.rst  modules.rst
hlapipeline/: __init__.py  align_to_gaia.py  alignimages.py
hlapipeline/utils/: astrometric_utils.py  astroquery_utils.py
tests/: base_classes.py  base_test.py  compare_sourcelists.py  test_align.py  test_extract.py
