[aliases]
# Define setup.py command aliases here
test = pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
collect_ignore = ['setup.py']

[ah_bootstrap]
auto_use = True

[flake8]
# E265: # has no space after
# E501: line too long
# F403: unable to detect undefined names
# F405: may be defined from * imports
ignore = E265,E501,F403,F405
exclude = _astropy_init.py,conftest.py,schemas,tags,docs

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = hlapipeline
description = Code for implementing HLA-type processing in the HST Pipeline
long_description = HLA-type processing code for use in the HST calibration pipeline
author = HLAPipeline Developers
author_email = help@stsci.edu
license = BSD 3-Clause
url = https://hlapipeline.readthedocs.io/en/latest/
edit_on_github = False
github_project = spacetelescope/hlapipeline
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5

[entry_points]

